Align bottom border lines of list header and content header - fixes #60

--- a/app/assets/stylesheets/modules/_modules.scss
+++ b/app/assets/stylesheets/modules/_modules.scss
@@ -54,6 +54,7 @@
 .content_header {
   @extend .list_header;
   background-color: $delta_color;
+  padding-bottom: 0.2em;
 }
 
 
